feat: add job ejs page + route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>itupy: Baixe Videos do Youtube</title>
+  <title>Itupy: Baixe Videos do Youtube</title>
   <meta name="description"
     content="Baixe videos do YouTube facilmente com itupy. Suporte para MP4 e MP3. Rápido, seguro e gratuito. Experimente agora!">
 
